rust-c/target/debug/build/anyhow-f20f3851add927d7/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/vins/Documents/Dev/C/rust-c/target/debug/build/anyhow-f20f3851add927d7/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
